--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -13,6 +13,20 @@ data:
   batch_size: 8
   image_size: [1920, 1080]
 
+transformations:
+  SanitizeBoundingBoxes: true
+  RandomPhotometricDistort:
+    enabled: true
+    probability: 1
+  RandomZoomOut:
+    enabled: true
+    fill: [123, 117, 104]
+  RandomIoUCrop:
+    enabled: true
+  RandomHorizontalFlip:
+    enabled: true
+    probability: 1
+
 model:
   loss: mse
   lr: 3e-4
