--- a/dockerfiles/Dockerfile_gradio
+++ b/dockerfiles/Dockerfile_gradio
@@ -1,3 +1,4 @@
+#GRADIO DOCKERFILE - need to put it in spaces submodule and then build it
 FROM python:3.9
 
 RUN apt-get update && apt-get install -y libgl1-mesa-glx && rm -rf /var/lib/apt/lists/*
