--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-gradio==4.15.0
+cityscapesscripts==2.2.2
+colorama==0.4.6
+Cython==0.29.35
+h5py==3.10.0
 hydra-core==1.3.2
+ipython==8.15.0
+matplotlib==3.7.1
 numpy==1.24.2
 omegaconf==2.3.0
 opencv_contrib_python==4.6.0.66
 opencv_python==4.8.1.78
-Pillow==9.5.0
+Pillow==10.2.0
+pycocotools==2.0.7
 pytorch_lightning==2.0.7
+scikit_learn==1.2.2
+scipy==1.12.0
+setuptools==68.2.2
+skimage==0.0
 torch==2.1.2
 torchvision==0.16.2
-torchaudio==2.1.2
-wandb==0.12.10
-protobuf==3.20.1
-pycocotools==2.0.7
+tqdm==4.66.1
+yacs==0.1.8
