--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ Pillow==9.5.0
 pytorch_lightning==2.0.7
 torch==2.1.2
 torchvision==0.16.2
+torchaudio==2.1.2
+wandb==0.12.10
+protobuf==3.20.1
+pycocotools==2.0.7
